add alert dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BookStoreApp</string>
+    <string name="reset_password_message">Reset password link was sent to your email. Please follow the instructions to reset password.</string>
 </resources>
